--- a/Visualisations.ipynb
+++ b/Visualisations.ipynb
@@ -520,16 +520,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "intubed_true = intubation_vs_other.loc[intubation_vs_other['intubed'] == 1]"
+    "intubed_true = intubation_vs_other.loc[intubation_vs_other['intubed'] == 1]\n",
+    "intubed_false = intubation_vs_other.loc[intubation_vs_other['intubed'] == 2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +621,7 @@
        "97  03877c      1.0        1.0   2.0     2.0      2.0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,10 +632,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[pneumonia    8949.0\n",
+       " dtype: float64, copd    411.0\n",
+       " dtype: float64, asthma    191.0\n",
+       " dtype: float64, tobacco    895.0\n",
+       " dtype: float64]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = 4\n",
+    "\n",
+    "intubed_yes = [(intubed_true.loc[intubed_true['pneumonia'] == 1,['pneumonia']].sum()),\n",
+    "               (intubed_true.loc[intubed_true['copd'] == 1,['copd']].sum()),\n",
+    "               (intubed_true.loc[intubed_true['asthma'] == 1,['asthma']].sum()),\n",
+    "               (intubed_true.loc[intubed_true['tobacco'] == 1,['tobacco']].sum())]\n",
+    "\n",
+    "intubed_yes = [intubed_true['pneumonia'].to_numpy().count(),\n",
+    "               intubed_true['copd'].to_numpy().count(),\n",
+    "               intubed_true['asthma'].to_numpy().count(),\n",
+    "               intubed_true['pneumonia'].to_numpy().count()]\n",
+    "\n",
+    "intubed_no = [(intubed_false.loc[intubed_false['pneumonia'] == 1,['pneumonia']].sum()),\n",
+    "               (intubed_false.loc[intubed_false['copd'] == 1,['copd']].sum()),\n",
+    "               (intubed_false.loc[intubed_false['asthma'] == 1,['asthma']].sum()),\n",
+    "               (intubed_false.loc[intubed_false['tobacco'] == 1,['tobacco']].sum())]\n",
+    "\n",
+    "intubed_yes\n",
+    "\n",
+    "#intubed_yes = [8949.0, 411.0, 191.0, 895.0]\n",
+    "\n",
+    "#intubed_no = [64233.0, 5063.0, 2943.0, 9814.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Position of bars on x-axis\n",
+    "ind = np.arange(N)\n",
+    "\n",
+    "# Figure size\n",
+    "plt.figure(figsize=(10,10))\n",
+    "\n",
+    "# Width of a bar\n",
+    "width = 0.3\n",
+    "\n",
+    "# Plotting\n",
+    "plt.bar(ind, intubed_yes , width, label='Yes')\n",
+    "plt.bar(ind + width, intubed_no, width, label='No')\n",
+    "\n",
+    "plt.ylabel('No. of Cases With Co-Morbidities')\n",
+    "plt.title('Intubation x other factors')\n",
+    "\n",
+    "plt.xticks(ind + width / 2, ('pneumonia', 'copd', 'asthma', 'tobacco'))\n",
+    "\n",
+    "plt.legend(loc='best')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
