Removed unneeded files

--- a/model_creator-refined.ipynb
+++ b/model_creator-refined.ipynb
@@ -346,22 +346,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>patient_type</th>\n",
+       "      <th>entry_date</th>\n",
+       "      <th>date_symptoms</th>\n",
+       "      <th>date_died</th>\n",
+       "      <th>intubed</th>\n",
+       "      <th>pneumonia</th>\n",
+       "      <th>age</th>\n",
+       "      <th>pregnancy</th>\n",
+       "      <th>diabetes</th>\n",
+       "      <th>...</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>other_disease</th>\n",
+       "      <th>cardiovascular</th>\n",
+       "      <th>obesity</th>\n",
+       "      <th>renal_chronic</th>\n",
+       "      <th>tobacco</th>\n",
+       "      <th>contact_other_covid</th>\n",
+       "      <th>covid_res</th>\n",
+       "      <th>icu</th>\n",
+       "      <th>Died?</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>154fea</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>02-06-2020</td>\n",
+       "      <td>02-06-2020</td>\n",
+       "      <td>9999-99-99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16e14e</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22-06-2020</td>\n",
+       "      <td>17-06-2020</td>\n",
+       "      <td>9999-99-99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>149f1c</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17-06-2020</td>\n",
+       "      <td>12-06-2020</td>\n",
+       "      <td>9999-99-99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1d5df2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>08-06-2020</td>\n",
+       "      <td>07-06-2020</td>\n",
+       "      <td>9999-99-99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>67</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18f860</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>27-05-2020</td>\n",
+       "      <td>27-05-2020</td>\n",
+       "      <td>9999-99-99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "23158"
+       "        sex  patient_type  entry_date date_symptoms   date_died  intubed  \\\n",
+       "id                                                                         \n",
+       "154fea    1             2  02-06-2020    02-06-2020  9999-99-99        2   \n",
+       "16e14e    1             2  22-06-2020    17-06-2020  9999-99-99        2   \n",
+       "149f1c    1             2  17-06-2020    12-06-2020  9999-99-99        2   \n",
+       "1d5df2    1             2  08-06-2020    07-06-2020  9999-99-99        1   \n",
+       "18f860    1             2  27-05-2020    27-05-2020  9999-99-99        2   \n",
+       "\n",
+       "        pneumonia  age  pregnancy  diabetes  ...  hypertension  other_disease  \\\n",
+       "id                                           ...                                \n",
+       "154fea          2   25          2         2  ...             2              2   \n",
+       "16e14e          2   52          2         2  ...             2              2   \n",
+       "149f1c          1   51          2         2  ...             2              2   \n",
+       "1d5df2          1   67          2         1  ...             1              2   \n",
+       "18f860          1   59          2         1  ...             2              2   \n",
+       "\n",
+       "        cardiovascular  obesity  renal_chronic  tobacco  contact_other_covid  \\\n",
+       "id                                                                             \n",
+       "154fea               2        2              2        2                    1   \n",
+       "16e14e               2        1              2        1                    1   \n",
+       "149f1c               2        2              2        2                    1   \n",
+       "1d5df2               2        1              2        2                    1   \n",
+       "18f860               2        2              2        2                    1   \n",
+       "\n",
+       "        covid_res  icu  Died?  \n",
+       "id                             \n",
+       "154fea          1    2      1  \n",
+       "16e14e          1    2      1  \n",
+       "149f1c          1    2      1  \n",
+       "1d5df2          1    2      1  \n",
+       "18f860          1    2      1  \n",
+       "\n",
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(covid_df)"
+    "covid_df.head()"
    ]
   },
   {
